--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h6>Qiime stuff</h6>
+<h4>Qiime stuff</h4>
+<p>.ab1 files are trace files, seq files are the sequence of nucleotides from the trace files</p>
+<p>Display and visually clean the trace files looking for N on both ends, trim and do blast search</p>
+tool: https://www.youtube.com/watch?v=Xqs6bcYSv34
+<p></p>
