--- a/index.html
+++ b/index.html
@@ -2,4 +2,22 @@
 <p>.ab1 files are trace files, seq files are the sequence of nucleotides from the trace files</p>
 <p>Display and visually clean the trace files looking for N on both ends, trim and do blast search</p>
 tool: https://www.youtube.com/watch?v=Xqs6bcYSv34
+<p>a1-p1.ab1 too small</p>
+<p>a1-p2.ab1 </p>
+<h4>instructions for processing using Mega</h4>h4>
+<p>1) open a1-p2.ab1</p>
+<p>2) find the first N, click to select</p>
+<img src="a1p2_a.png">
+<p>once the first N is selected, select mask upstream and the sequence to the left should grey out. 
+Click the >>N arrow to select the next N </p>
+<img src="a1p2_b.png">
+<img src="a1p2_b1.png">
+<p>this leads to the next N. Select mask downstream and verify the part of the sequence after the N is greyed out.</p>
+<img src="a1p2_c.png">
+<img src="a1p2_c1.png">
+<p>Copy the sequence and paste into blast. https://blast.ncbi.nlm.nih.gov/Blast.cgi</p>
+Nucleotide search >> rRNA/ITS databases. 
+<img src="a1p2_d.png">
 <p></p>
+<p></p>
+
