--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@ Nucleotide search >> rRNA/ITS databases.
 <p>can build a tree on ax-px.ab1</p>
 <img src="codoncode/codoncode1c.png">
 <h6>phred has to read and clean; match with above MEGA output. </h6>
-<img src="phred1.png">
-<img src="phred2.png">
-<img src="phred3.png">
-<img src="phred4.png">
-<img src="phred5.png">
-<img src="phred6.png">
-<img src="phred7.png">
-<img src="phred8.png">
-<img src="phred9.png">
-<img src="phred10.png">
-<img src="phred11.png">
-<img src="phred12.png">
-<img src="phred13.png">
-<img src="phred14.png">
+<img src="codoncode/phred1.png">
+<img src="codoncode/phred2.png">
+<img src="codoncode/phred3.png">
+<img src="codoncode/phred4.png">
+<img src="codoncode/phred5.png">
+<img src="codoncode/phred6.png">
+<img src="codoncode/phred7.png">
+<img src="codoncode/phred8.png">
+<img src="codoncode/phred9.png">
+<img src="codoncode/phred10.png">
+<img src="codoncode/phred11.png">
+<img src="codoncode/phred12.png">
+<img src="codoncode/phred13.png">
+<img src="codoncode/phred14.png">
 
 
