--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ Nucleotide search >> rRNA/ITS databases.
 <h4>CodonCode Aligner</h4>
 <p>CCA incorporates phred into the eval version. Phred is supposed to outperform the ABI sw by using "simple fourier" analysis. not clear</p>
 <p>When reading you get blank, highest quality, light green, dark green lowest quality</p>
-<img src="codoncode/codoncode1a.png">
+<img src="codoncode/codoncode_1a.png">
 <p>assemble ax-px into a contig</p>p>
-<img src="codoncode/codoncode1b.png">
+<img src="codoncode/codoncode_1b.png">
 <p>can build a tree on ax-px.ab1</p>
-<img src="codoncode/codoncode1c.png">
+<img src="codoncode/codoncode_1c.png">
 <h6>phred has to read and clean; match with above MEGA output. </h6>
 <img src="codoncode/phred1.png">
 <img src="codoncode/phred2.png">
